--- a/css/johari.css
+++ b/css/johari.css
@@ -1,4 +1,4 @@
-body { font-family: 'Arial'}
+body { font-family: 'Helvetica'; margin: 0px; padding: 0px; width: 100%; font-size: 100%}
 table { width: 100%; }
 table tr td { width: 110px; height: 50px; background-color: #CCC; text-align: center; padding: 10px;}
 #main { margin-left: auto; margin-right: auto; width: 80%}
@@ -16,3 +16,35 @@ table tr td { width: 110px; height: 50px; background-color: #CCC; text-align: ce
     font-weight: bold;
     margin-top: 1rem;
 }
+#ok {
+    padding: 1rem;
+    background-color: #f45f42;
+    color: #fff;
+    border: solid 2px #fff;
+    font-size: 5rem;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+@-webkit-keyframes pop-in {
+    0% { opacity: 0; -webkit-transform: scale(0.5); }
+    100% { opacity: 1; -webkit-transform: scale(1); }
+}
+@-moz-keyframes pop-in {
+    0% { opacity: 0; -moz-transform: scale(0.5); }
+    100% { opacity: 1; -moz-transform: scale(1); }
+}
+@keyframes pop-in {
+    0% { opacity: 0; transform: scale(0.5); }
+    100% { opacity: 1; transform: scale(1); }
+}
+
+#popup { 
+    height: 100%; 
+    background-color: #f45f42; 
+    font-size: 5rem;
+    -webkit-animation:pop-in 0.5s;
+    -moz-animation:pop-in 0.5s;
+    -ms-animation:pop-in 0.5s; 
+}
+
+#popup article { margin-left: auto; margin-right: auto; padding-top: 10%; width: 75%; text-align: center; color: #fff}
