Convert to bootstrap

--- a/css/johari.css
+++ b/css/johari.css
@@ -1,105 +1,18 @@
-body { font-family: 'Helvetica'; margin: 0px; padding: 0px; width: 100%; font-size: 100%; color: #000}
-
-@media screen and (max-width: 800px) {
-    body { font-size: 2rem }
-    table#adjectives { 
-        width: 100% !important; 
-    }
-    table tr td { 
-        font-size: auto
-    }
-    #messages { 
-        font-size: 1rem
-    }
-    article { 
-        font-size: 1.5rem
-    }
-    #footer {
-        display: none;
-        position: fixed;
-        height: 50px;
-    }
-}
-
-@media screen and (min-width: 800px) {
-    table#adjectives { 
-        width: 50% !important; 
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-table#adjectives {
-    display: none;
-}
-
-table tr td { 
-    cursor: grab;
-    margin: 5px;
-    padding: 5px;
-    text-align: center;
-    border: solid 1px #ccc;
-}
 
 .selected { background-color: #ccc;  }
-
-#footer {
+.quality { padding: 5px; padding: 5px;}
+.quality span  {
+  border: 2px solid ccc;
+  padding: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+}
+.long { width: 100px;}
+#johari {
+    margin-top: 2%;
     display: none;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: 000;
-    text-align: center;
-    -webkit-animation:pop-in 0.1s;
-    -moz-animation:pop-in 0.1s;
-    -ms-animation:pop-in 0.1s; 
 }
-
-#footer button {
-    margin-top: .75rem;
+#intro {
+    
 }
-
-#ok {
-    font-weight: bold;
-}
-@-webkit-keyframes pop-in {
-    0% { opacity: 0; -webkit-transform: scale(0.5); }
-    100% { opacity: 1; -webkit-transform: scale(1); }
-}
-@-moz-keyframes pop-in {
-    0% { opacity: 0; -moz-transform: scale(0.5); }
-    100% { opacity: 1; -moz-transform: scale(1); }
-}
-@keyframes pop-in {
-    0% { opacity: 0; transform: scale(0.5); }
-    100% { opacity: 1; transform: scale(1); }
-}
-
-#popup { 
-    background-color: #fff;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    -webkit-animation:pop-in 0.5s;
-    -moz-animation:pop-in 0.5s;
-    -ms-animation:pop-in 0.5s; 
-}
-
-#messages { 
-    background-color: #fff;
-    display: none;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    -webkit-animation:pop-in 0.5s;
-    -moz-animation:pop-in 0.5s;
-    -ms-animation:pop-in 0.5s; 
-}
-
-article { 
-    margin-left: auto; 
-    margin-right: auto; 
-    width: 75%; 
-    text-align: center; 
-}
+.hide { display: none;}
